# battlestar

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  DEPLOY_FLYIO.md  Dockerfile  SHARED_CONSTANTS.md  deploy-all.ps1  game-constants.toml  vercel.json
.github/workflows/: deploy-fly.yml  deploy-vercel.yml
client/: Cargo.toml  build.rs  index.html
client/src/: components.rs  constants.rs  entities.rs  lib.rs
client/src/domain/: entities.rs
client/src/net/: input.rs  mod.rs  sync.rs  transport.rs
client/src/systems/: camera.rs  invincibility.rs  joystick.rs  mod.rs  movement.rs  network.rs  setup.rs
client/www/: index.html
server/: .dockerignore  Cargo.toml  Dockerfile  build.rs  fly.toml
server/src/: constants.rs  handlers.rs  main.rs  state.rs
server/src/app/: state.rs
server/src/domain/: game.rs
server/src/game/: mod.rs  physics.rs  state.rs  types.rs
server/src/infrastructure/: mod.rs  server.rs  websocket.rs
server/src/net/: ws.rs
server/src/sim/: game.rs  mod.rs  physics.rs
server/src/simulation/: game_loop.rs  mod.rs
server/src/state/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/entities/: asteroid.rs  mod.rs  ship.rs
shared/src/input/: validator.rs
shared/src/math/: vec2.rs
shared/src/network/: delta.rs  messages.rs  mod.rs
shared/src/physics/: collision.rs  mod.rs  movement.rs
