[package]
name = "battlestar-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]          # Obligatoire pour wasm-bindgen / trunk

[dependencies]
bevy = { version = "0.18", features = ["bevy_sprite", "png", "webgl2"] }
bevy_asset = "0.18"

bevy_prototype_lyon = "0.16"          # ← juste ça, sans features inutiles

bevy_rapier2d = "0.32" # support WASM important !

serde = { workspace = true }

tungstenite = "0.28"
wasm-bindgen = "0.2.108"

# Optionnel : pour des assets web (si tu charges des fichiers)
# image = { version = "0.25", default-features = false, features = ["png"] }
# wasm-bindgen = "0.2"   # souvent ajouté automatiquement par trunk


[build]
target = "index.html"
dist = "www"
