[package]
name = "battlestar-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[lib]
crate-type = ["cdylib"]          # Obligatoire pour wasm-bindgen / trunk

[dependencies]
bevy = { version = "0.18", features = ["bevy_sprite", "png", "webgl2"] }
bevy_asset = "0.18"

bevy_prototype_lyon = "0.16"          # ← juste ça, sans features inutiles

serde = { workspace = true }
serde_json = "1"

js-sys = "0.3"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent", "BinaryType"] }

[build-dependencies]
toml = { workspace = true }

# Optionnel : pour des assets web (si tu charges des fichiers)
# image = { version = "0.25", default-features = false, features = ["png"] }
# wasm-bindgen = "0.2"   # souvent ajouté automatiquement par trunk
