[package]
name = "battlestar-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.28"

[build-dependencies]
toml = "0.9"
